--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
+    <a id="topo" href="#"></a>
     <header>
         <h1>Curiosidades de Tecnologia</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
@@ -83,6 +84,7 @@
                     
             <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
         </article>
+        <a class="botao-topo" href="#topo">Voltar para o Início da Página</a>
     </main>
     <footer>
         <p>Site criado por Gabriel Chiarelli, inspirado no design de <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a>, para o Curso de HTML5 e CSS3 do <a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank">CursoemVideo</a></p>
